[gd_scene load_steps=15 format=3 uid="uid://bse7lkjog06jo"]

[ext_resource type="Script" path="res://Game/Character/Character.gd" id="1_gkjvx"]
[ext_resource type="PackedScene" uid="uid://bwei0u11658dw" path="res://Game/Character/Bracelet/Bracelet.tscn" id="2_5y1p6"]
[ext_resource type="PackedScene" uid="uid://4ba0yyxyuu7w" path="res://Game/Character/Menu/Menu.tscn" id="3_x6d6r"]
[ext_resource type="AudioStream" uid="uid://b02dvhfcqvp2h" path="res://Game/Character/Acoustics/Collide.WAV" id="4_lmb5o"]
[ext_resource type="AudioStream" uid="uid://dovykhsxvdeol" path="res://Game/Character/Acoustics/Jump.WAV" id="5_xny0s"]
[ext_resource type="AudioStream" uid="uid://c8p2ubl4ii04d" path="res://Game/Character/Acoustics/Contact_Wall_2.WAV" id="6_orldx"]
[ext_resource type="AudioStream" uid="uid://bos2uxc6hnfwy" path="res://Game/Character/Acoustics/Contact_Wall_1.WAV" id="7_5p38d"]
[ext_resource type="AudioStream" uid="uid://b6gitxbts6ayo" path="res://Game/Character/Acoustics/Contact_Floor.WAV" id="8_ad7ft"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0bj8y"]
radius = 0.25
height = 1.2

[sub_resource type="CapsuleMesh" id="CapsuleMesh_naxxk"]
radius = 0.25
height = 1.2

[sub_resource type="Animation" id="Animation_44675"]
resource_name = "Into"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Change:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Change:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_u4xld"]
resource_name = "Quit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Change:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Change:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_682v6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Change:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Change:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ha3f7"]
_data = {
"Into": SubResource("Animation_44675"),
"Quit": SubResource("Animation_u4xld"),
"RESET": SubResource("Animation_682v6")
}

[node name="Character" type="CharacterBody3D"]
collision_layer = 33
collision_mask = 33
wall_min_slide_angle = 0.907571
floor_constant_speed = true
floor_max_angle = 0.907571
script = ExtResource("1_gkjvx")

[node name="Head" type="Camera3D" parent="."]
current = true

[node name="ToolPoint" type="Marker3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0)

[node name="Tool" type="Camera3D" parent="Head"]
transform = Transform3D(0.996195, -0.0871558, -5.21676e-07, 2.06961e-07, -3.61999e-06, 1, -0.0871558, -0.996195, -3.58818e-06, 0.346489, -0.3, -0.0554083)
cull_mask = 1048574

[node name="Tool" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.200285, 0)
top_level = true

[node name="Bracelet" parent="Tool" instance=ExtResource("2_5y1p6")]

[node name="Point" type="Label3D" parent="Tool"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -0.5)
pixel_size = 0.0005
no_depth_test = true
fixed_size = true
text = "Â·"
font_size = 128
outline_size = 0

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3, 0)
shape = SubResource("CapsuleShape3D_0bj8y")

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3, 0)
mesh = SubResource("CapsuleMesh_naxxk")

[node name="Acoustics" type="Node3D" parent="."]

[node name="Collide" type="AudioStreamPlayer3D" parent="Acoustics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.25)
stream = ExtResource("4_lmb5o")
volume_db = -30.0
max_distance = 0.5
bus = &"Scene"

[node name="Jump" type="AudioStreamPlayer3D" parent="Acoustics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.3, 0)
stream = ExtResource("5_xny0s")
volume_db = -20.0
max_distance = 2.0
bus = &"Scene"

[node name="Contact_Wall_1" type="AudioStreamPlayer3D" parent="Acoustics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.15, -1.3, 0)
stream = ExtResource("7_5p38d")
volume_db = -20.0
max_distance = 2.0
bus = &"Scene"

[node name="Contact_Wall_2" type="AudioStreamPlayer3D" parent="Acoustics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.15, -1.3, 0)
stream = ExtResource("6_orldx")
volume_db = -20.0
max_distance = 2.0
bus = &"Scene"

[node name="Contact_Floor" type="AudioStreamPlayer3D" parent="Acoustics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.3, 0)
stream = ExtResource("8_ad7ft")
volume_db = -15.0
max_distance = 2.0
bus = &"Scene"

[node name="Menu" parent="." instance=ExtResource("3_x6d6r")]

[node name="Change" type="ColorRect" parent="."]
process_mode = 3
visible = false
top_level = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="ChangeScene" type="AnimationPlayer" parent="Change"]
root_node = NodePath("../..")
autoplay = "Into"
libraries = {
"": SubResource("AnimationLibrary_ha3f7")
}

[connection signal="animation_finished" from="Change/ChangeScene" to="." method="_on_change_scene_animation_finished"]
